Copyright (c) 2004-2008 Infrae. All rights reserved.
See also LICENSE.txt


SilvaNewsNetwork changes

  2.7.6 (unreleased)
  
   Bugs Fixed:

     - always sort agenda viewer results by start datetime
     - for news viewers, sort results by either start datetime,
       if present, else display datetime, so that agenda items
       if included in the results, are sorted properly

   Ported from trunk (SNN 2.8)

     - News and Agenda Viewers now have a "Year Range" property which
       controls the number of years in the past and future wich are
       displayed in the archive.  Attempts to access years outside
       of this range will raise 404's.

     - correct localization datetime issues with rssaggregator's rss/atom feeds
       and inlineviewer newsprovider. 

   Features:

     - removing '<<' and '>>' from links and putting the the html
       entities in a span
     - adding wrappers for the news and agenda archive content area
     - adding a vertical separator between months

  2.7.5 (2009-03-26)

   Bugs Fixed

     - The 'publish now' button in the edit tab of news items raised a 404
       when clicked, and it wasn't translated.

  2.7.4 (2009-03-05)

   Bugs Fixed

     - The rss.xml feed on news and agenda viewers did not validate against
       the rss 1.0 specification

  2.7.3 (2009/02/19)
  
    Bugs Fixed
    
      - The 'publish now' button for news and agenda items was not
        setting the display date time.  The result was that new items
        would not be found by filters
        
      - removed the SNN 2.6 upgrader (which refreshes the catalog).
        All news items do need to be reindexed.  To do this, use the
        "Partial catalog rebuilds" tab of the Silva Extensions Service
        (in the ZMI) to rebuild each Silva News Publication.

      - Added a dummy upgrader for SNN 2.7, so it appears that 
        the upgrade upgrades to 2.7

  2.7.2 (2009/02/12)
  
    Bugs Fixed
    